--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ PyJWT==1.7.1
 pytz==2019.1
 sqlparse==0.3.0
 whitenoise==4.1.3
-python-http-client=3.1.0
-sendgrid=6.0.5
+python-http-client==3.1.0
+sendgrid==6.0.5
